objects/Coupon_Request_Line_Item__c.object
<CustomObject>
    <description>Individual Coupons that are added to the Coupon Request by the Community User</description>
    <fields>
        <fullName>Coupon_Brand__c</fullName>
        <description>Brand of the Coupon - Set by the Process Builder</description>
        <label>Coupon Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PMI</fullName>
                </value>
                <value>
                    <fullName>Purina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coupon_Number__c</fullName>
        <description>Coupon Number</description>
        <label>Coupon Number</label>
        <referenceTo>Coupon__c</referenceTo>
        <relationshipLabel>Coupon Request Line Items</relationshipLabel>
        <relationshipName>Coupon_Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coupon_Request__c</fullName>
        <description>Coupon Request for the Line Item to be added to</description>
        <label>Coupon Request</label>
        <referenceTo>Coupon_Request__c</referenceTo>
        <relationshipLabel>Coupon Request Line Items</relationshipLabel>
        <relationshipName>Coupon_Request_Line_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description_Long__c</fullName>
        <description>Long Description of the Coupon</description>
        <label>Description (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Coupon</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExtendedValue__c</fullName>
        <description>Extended Value of the Coupon</description>
        <label>Extended Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Face_Value__c</fullName>
        <description>Value of the Coupon</description>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Coupons__c</fullName>
        <description>Number of Coupons to be applied</description>
        <label>Number of Coupons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Coupon Request Line Item</label>
    <nameField>
        <displayFormat>CRLI{000000}</displayFormat>
        <label>Coupon Request Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>